[releng] Fix deprecation warnings and reflective access warnings for Java 11.